--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
             <artifactId>hutool-all</artifactId>
             <version>5.8.26</version>
         </dependency>
+        <!-- Tencent COS 对象存储 https://cloud.tencent.com/document/product/436/10199 -->
+        <dependency>
+            <groupId>com.qcloud</groupId>
+            <artifactId>cos_api</artifactId>
+            <version>5.6.227</version>
+        </dependency>
         <!-- Knife4j https://doc.xiaominfo.com/docs/quick-start -->
         <dependency>
             <groupId>com.github.xiaoymin</groupId>
