--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,11 @@
             <version>5.2.0</version>
         </dependency>
 
+        <!-- WebSocket -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
 
 
     </dependencies>
